--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@graphql-tools/schema": "^8.3.5",
+    "@prisma/client": "^3.11.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.3.0",
+    "prisma-client": "^0.0.0"
   }
 }
