--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/luxon": "^2.3.1",
     "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
@@ -30,11 +31,13 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@graphql-tools/schema": "^8.3.5",
+    "@aws-sdk/client-s3": "^3.58.0",
+    "@aws-sdk/s3-request-presigner": "^3.58.0",
     "@prisma/client": "^3.11.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
-    "prisma-client": "^0.0.0"
+    "graphql-modules": "^2.0.0",
+    "luxon": "^2.3.1"
   }
 }
